Fix for Email and Document views
Looks like the CSS got messed up in some refactoring.

Have taken the oppertunity to fix this by moving the CSS for it out of DualPane and into to DocumentScreen - which makes sense now it’s no longer used in the Entity view.

--- a/ui/src/components/Preview/Preview.scss
+++ b/ui/src/components/Preview/Preview.scss
@@ -115,9 +115,9 @@
   
   /*
   .ContentPane,
-  .content-pane-outer,
-  .content-pane-inner,
-  .content-pane-inner > * {
+  .outer,
+  .inner,
+  .inner > * {
     height: 100%;
   }
   */
